# azure-blob-storage-mcp-server

./: .gitignore  README.md  pyproject.toml
server/: main.py
tests/: test_container_latest_resource.py  test_main_integration.py
