[project]
name = "azure-blob-storage-mcp-server"
version = "0.1.0"
description = "An MCP Server to interact with Azure Blob Storage Clients and Resources"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.23.0",
    "azure-storage-blob>=12.25.1",
    "mcp[cli]>=1.10.1",
]
